--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.80.0",
-    "@types/jest": "^26.0.10",
-    "@types/node": "^10.17.50",
-    "aws-cdk": "^1.80.0",
+    "@aws-cdk/assert": "^1.90.1",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^10.17.54",
+    "aws-cdk": "^1.90.1",
     "jest": "^26.4.2",
-    "ts-jest": "^26.2.0",
+    "ts-jest": "^26.5.1",
     "ts-node": "^8.1.0",
-    "typescript": "~3.9.7"
+    "typescript": "^3.9.9"
   },
   "dependencies": {
-    "@aws-cdk/aws-s3": "^1.80.0",
-    "@aws-cdk/core": "^1.80.0",
+    "@aws-cdk/aws-s3": "^1.90.1",
+    "@aws-cdk/core": "^1.90.1",
     "source-map-support": "^0.5.16"
   }
 }
