CDK-T2: Updating the package and changing the name of the bucket

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
     "ts-node": "^8.1.0",
-    "typescript": "~3.9.7"
+    "typescript": "^3.9.7"
   },
   "dependencies": {
     "@aws-cdk/aws-s3": "^1.80.0",
