--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@aws-cdk/aws-lambda": "^1.130.0",
     "@aws-cdk/aws-s3": "^1.90.1",
+    "@aws-cdk/aws-s3-notifications": "^1.130.0",
     "@aws-cdk/core": "^1.90.1",
     "source-map-support": "^0.5.16"
   }
