--- a/package.json
+++ b/package.json
@@ -11,20 +11,18 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.90.1",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^10.17.54",
-    "aws-cdk": "^1.90.1",
+    "@types/jest": "^26.0.24",
     "jest": "^26.4.2",
     "ts-jest": "^26.5.1",
     "ts-node": "^8.1.0",
-    "typescript": "^3.9.9"
+    "typescript": "^3.9.9",
+    "aws-cdk": "^2.13.0",
+    "aws-cdk-lib": "^2.13.0"
   },
   "dependencies": {
-    "@aws-cdk/aws-lambda": "^1.130.0",
-    "@aws-cdk/aws-s3": "^1.90.1",
-    "@aws-cdk/aws-s3-notifications": "^1.130.0",
-    "@aws-cdk/core": "^1.90.1",
+    "aws-cdk": "^2.13.0",
+    "aws-cdk-lib": "^2.13.0",
+    "constructs": "^10.0.71",
     "source-map-support": "^0.5.16"
   }
 }
