--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
-    "jest": "^26.4.2",
-    "ts-jest": "^26.5.1",
-    "ts-node": "^8.1.0",
-    "typescript": "^3.9.9",
-    "aws-cdk": "^2.13.0",
-    "aws-cdk-lib": "^2.13.0"
+    "aws-cdk": "^2.114.1",
+    "aws-cdk-lib": "^2.114.1",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.6",
+    "ts-node": "^8.10.2",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
-    "aws-cdk": "^2.13.0",
-    "aws-cdk-lib": "^2.13.0",
-    "constructs": "^10.0.71",
-    "source-map-support": "^0.5.16"
+    "aws-cdk": "^2.114.1",
+    "aws-cdk-lib": "^2.114.1",
+    "constructs": "^10.3.0",
+    "source-map-support": "^0.5.21"
   }
 }
